@@ -1,4 +1,8 @@
 #ifndef BATTLE_VIEW_H
 #define BATTLE_VIEW_H
 
+#include "core/game_manager.h"
+
+void enterPlaceholderBattle(GameManager* game, Entity* opponent);
+
 #endif
