@@ -1,4 +1,8 @@
 #ifndef CTX_BUILDING_H
 #define CTX_BUILDING_H
 
+#include "core/game_manager.h"
+
+void enterPlaceholderBuilding(GameManager* game, TileType type);
+
 #endif
